--- a/src/app/component/user/statistic-user/statistic-user.component.html
+++ b/src/app/component/user/statistic-user/statistic-user.component.html
@@ -18,7 +18,8 @@
             <td>{{user.id}}</td>
             <td>{{user.name | titlecase}}</td>
             <td>{{user.quantity}}</td>
-            <td>{{user.totalPrice | currency:'':'':'3.0'}}VNĐ</td>
+            <td *ngIf="user.totalPrice == 0">{{0}}VND</td>
+            <td *ngIf="user.totalPrice != 0">{{user.totalPrice | currency:'':'':'1.2-2'}}VNĐ</td>
             <td>{{user.accumulatorPoint}}</td>
         </tr>
         </tbody>
