fix 30/3 dev-ThiND

--- a/src/app/component/user/list-member/list-member.component.css
+++ b/src/app/component/user/list-member/list-member.component.css
@@ -1,3 +1,8 @@
 .custom{
     margin-top: 10rem;
 }
+thead > tr{
+    color: #FFFFFF;
+    background-color: #343a40;
+    border-color: #454d55;
+}
