--- a/src/app/component/user/list-employee/list-employee.component.html
+++ b/src/app/component/user/list-employee/list-employee.component.html
@@ -5,7 +5,7 @@
 
         <div class="row">
             <div class="col-sm-12">
-                <table id="datatable" class="table table-striped table-bordered dataTable no-footer" role="grid"
+                <table id="datatable" class="table table-striped table-bordered dataTable no-footer text-center" role="grid"
                        aria-describedby="datatable_info">
                     <thead class="thead-dark">
                     <tr role="row">
@@ -47,7 +47,9 @@
                         <td>{{employee.phoneNumber}}</td>
                         <td>{{employee.address}}</td>
                         <td class="edit-user">
-                            <a [routerLink]="'/update/' + employee.id" class="btn btn-warning" style="color: white; margin-left: 15px">Sửa</a>
+                            <a [routerLink]="'/update/' + employee.id"  style="color: white; margin-left: 15px">
+                                <i style="color: blue" class="fa fa-edit"></i>
+                            </a>
 
                         </td>
 
