--- a/src/app/component/movie/create-movie/create-movie.component.html
+++ b/src/app/component/movie/create-movie/create-movie.component.html
@@ -199,7 +199,7 @@
                 <div class="col-sm-12 row">
                     <label class="col-2 col-form-label">Lịch chiếu</label>
                     <div class="col-sm-2">
-                        <button id="addTime" type="submit" (click)="addTime()" class="btn btn-primary">AddTime</button>
+                        <button id="addTime" type="button" (click)="addTime()" class="btn btn-primary">Thêm giờ chiếu</button>
                     </div>
                     <div class="col-sm-8" *ngFor="let startTime of Time;let i=index">
                         <input id="time" type="time" class="form-control" [formControlName]="i">
