--- a/src/app/component/movie/edit-movie/edit-movie.component.html
+++ b/src/app/component/movie/edit-movie/edit-movie.component.html
@@ -61,8 +61,9 @@
                 <label class="col-2 col-form-label">Diễn viên</label>
                 <div class="col-sm-8">
                     <mat-select class="custom-select form-control" multiple>
-                        <mat-option *ngFor="let actor of actorList"
-                                    formArrayName="actorList"
+                        <mat-option  *ngFor="let actor of actorList"
+                                     [value]="actor.id"
+                                     formArrayName="actorList"
                                     (onSelectionChange)="onCheckboxChangeActor($event,actor)">
                             <label class="form-check-label">{{actor.name}}</label>
                         </mat-option>
@@ -156,17 +157,16 @@
         </div>
 
         <div class="form-group">
-            <div class="col-sm-12 row">
-                <label class="col-2 col-form-label theloai">Thể loại</label>
-
-                <div *ngFor="let genre of genreList; let i = index" formArrayName="genreList"
-                     class="theloai-checkbox">
-                    <mat-checkbox class="genre1" (change)="onCheckboxChangeGenre($event,genre)">
-                        <label class="genre2">{{genre.name}}</label>
-                    </mat-checkbox>
-                </div>
+        <div class="col-sm-12 row">
+            <label class="col-2 col-form-label theloai">Thể loại</label>
+            <div *ngFor="let genre of genreList" formArrayName="genreList"
+                  class="theloai-checkbox">
+                <mat-checkbox  class="genre1" (change)="onCheckboxChangeGenre($event,genre)">
+                    <label class="genre2">{{genre.name}}</label>
+                </mat-checkbox>
             </div>
         </div>
+    </div>
         <div class="form-group">
             <div class="col-sm-12 row">
                 <label class="hidden col-2 col-form-label"></label>
@@ -199,7 +199,7 @@
                 <div class="col-sm-12 row">
                     <label class="col-2 col-form-label">Lịch chiếu</label>
                     <div class="col-sm-2">
-                        <button id="addTime" type="submit" (click)="addTime()" class="btn btn-primary">AddTime</button>
+                        <button id="addTime" type="button" (click)="addTime()" class="btn btn-primary">Thêm giờ chiếu</button>
                     </div>
                     <div class="col-sm-8" *ngFor="let startTime of Time;let i=index">
                         <input id="time" type="time" class="form-control" [formControlName]="i">
