--- a/src/app/component/movie/create-movie/create-movie.component.html
+++ b/src/app/component/movie/create-movie/create-movie.component.html
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
+      integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
 <div class="container">
     <form class="form-group" [formGroup]="formMovie" (ngSubmit)="createMovie()">
         <h2>Thêm mới phim</h2>
